set block--video overflow to hidden to fix object-fit: cover bug

--- a/assets/less/pages/_single.less
+++ b/assets/less/pages/_single.less
@@ -42,12 +42,13 @@
   }
   
   &--video {
+    overflow: hidden;
     
-     &__video {
-       width: 100%;
-       height: 100%;
-       object-fit: cover;
-     }
+    &__video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
   
   // &--gradient {
